# interpreter

./: .gitignore  README.md
interpreter/: CMakeLists.txt  bubble_sort.txt  config.cfg  dfs.txt  fibonachi.txt  main.cpp
interpreter/GUI/draw_commands/: CMakeLists.txt
interpreter/GUI/draw_commands/include/: draw_commands.h
interpreter/GUI/draw_commands/src/: draw_commands.cpp
interpreter/activation_record/: CMakeLists.txt
interpreter/activation_record/include/: activation_record.h
interpreter/activation_record/src/: activation_record.cpp
interpreter/ast/: CMakeLists.txt
interpreter/ast/include/: ast.h
interpreter/ast/src/: ast.cpp
interpreter/ast_visitor/: CMakeLists.txt
interpreter/ast_visitor/include/: check_performer.h  executor.h  executor_caller.h  node_visitor.h  printer.h  semantic_analyzer.h  semantic_analyzer_caller.h  sharable_object_holder.h  type_resolver.h  value_getter.h
interpreter/ast_visitor/src/: executor.cpp  executor_caller.cpp  printer.cpp  semantic_analyzer.cpp  semantic_analyzer_caller.cpp  type_resolver.cpp
interpreter/call_stack/: CMakeLists.txt
interpreter/call_stack/include/: call_stack.h
interpreter/call_stack/src/: call_stack.cpp
interpreter/cell/: CMakeLists.txt
interpreter/cell/include/: cell.h
interpreter/cell/src/: cell.cpp
interpreter/command/: CMakeLists.txt
interpreter/command/include/: command.h
interpreter/errors/: CMakeLists.txt
interpreter/errors/error_context/: CMakeLists.txt
interpreter/errors/error_context/include/: semantic_error_context.h
interpreter/errors/error_context/src/: semantic_error_context.cpp
interpreter/errors/semantic_error/: CMakeLists.txt
interpreter/errors/semantic_error/include/: semantic_error.h
interpreter/errors/semantic_error/src/: semantic_error.cpp
interpreter/executable_env_stream/: CMakeLists.txt
interpreter/executable_env_stream/include/: exe_env_ostream_loader.h  executable_environment_ostream.h
interpreter/executable_env_stream/src/: executable_environment_ostream.cpp
interpreter/execution_context/: CMakeLists.txt
interpreter/execution_context/include/: execution_context.h  execution_context_builder.h
interpreter/execution_context/src/: execution_context.cpp  execution_context_builder.cpp
interpreter/interpreter/: CMakeLists.txt
interpreter/interpreter/include/: interpreter.h
interpreter/interpreter/src/: interpreter.cpp
interpreter/loader/: CMakeLists.txt
interpreter/loader/include/: loader.h
interpreter/map/: CMakeLists.txt
interpreter/map/include/: map.h  map_iterator.h
interpreter/map/src/: map.cpp
interpreter/map_commands/: CMakeLists.txt
interpreter/map_commands/include/: map_commands.h
interpreter/map_commands/src/: map_commands.cpp
interpreter/nodes/: CMakeLists.txt
interpreter/nodes/include/: assign.h  binary_op.h  cell_literal.h  enums.h  func_call.h  func_decl.h  if_node.h  initialization.h  literal.h  matrix_elem_ref.h  move_robot.h  node_interface.h  node_traits.h  print_node.h  signed_literal.h  statement_list.h  unary_op.h  unsigned_literal.h  var_decl.h  var_ref.h  while_node.h  xray_node.h
interpreter/nodes/src/: assign.cpp  binary_op.cpp  cell_literal.cpp  func_call.cpp  func_decl.cpp  if_node.cpp  initialization.cpp  matrix_elem_ref.cpp  move_robot.cpp  print_node.cpp  signed_literal.cpp  statement_list.cpp  unary_op.cpp  unsigned_literal.cpp  var_decl.cpp  var_ref.cpp  while_node.cpp  xray_node.cpp
interpreter/parsing_driver/: CMakeLists.txt  grammar.yy  scanner.l
interpreter/parsing_driver/include/: grammar.tab.hh  parsing_driver.h
interpreter/parsing_driver/src/: grammar.tab.cc  lex.yy.cc  parsing_driver.cpp
interpreter/printable/: CMakeLists.txt
interpreter/printable/include/: printable_interface.h
interpreter/remote_environment_handler/: CMakeLists.txt
interpreter/remote_environment_handler/include/: remote_environment_handler.h
interpreter/remote_environment_handler/src/: remote_environment_handler.cpp
interpreter/robot/: CMakeLists.txt
interpreter/robot/include/: robot.h
interpreter/robot/src/: robot.cpp
interpreter/robot_commands/: CMakeLists.txt
interpreter/robot_commands/include/: robot_commands.h
interpreter/robot_commands/src/: robot_commands.cpp
interpreter/singleton_holder/: CMakeLists.txt
interpreter/singleton_holder/include/: singleton_holder.h
interpreter/symbol/: CMakeLists.txt
interpreter/symbol/include/: function.h  symbol.h  var.h
interpreter/symbol/src/: function.cpp  symbol.cpp  var.cpp
interpreter/symbol_table/: CMakeLists.txt
interpreter/symbol_table/include/: scoped_symbol_table.h  sym_tab_manager.h
interpreter/symbol_table/src/: scoped_symbol_table.cpp  sym_tab_manager.cpp
interpreter/value/: CMakeLists.txt
interpreter/value/include/: cell_value.h  matrix_value.h  signed_value.h  type_holder.h  type_token.h  unsigned_value.h  value.h  value_holder.h  value_interface.h
interpreter/value/src/: cell_value.cpp  matrix_value.cpp  signed_value.cpp  type_holder.cpp  unsigned_value.cpp
